[AVATAR] Corrected alignment on empty avatar in power select

--- a/bsrs-ember/app/styles/components/photo-avatar-power-select.scss
+++ b/bsrs-ember/app/styles/components/photo-avatar-power-select.scss
@@ -8,6 +8,11 @@
     border-radius: $borderRadiusLeft;
     width: 20px;
     height: 20px;
+    &.empty:before{
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+    }
   }
   .username {
     padding-right: 6px;
@@ -21,5 +26,10 @@
   .avatar {
     width: 20px;
     height: 20px;
+    &.empty:before{
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+    }
   }
 }
